[tool.poetry]
name = "netbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pynetbox = "^6.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
assertpy = "^1.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
